# battery-aging-feature-analysis

./: .gitignore  02_baseline_model.ipynb  03_2_feature_importance_Gridsearch.ipynb  03_feature_importance.ipynb  1_adding_engineered_features.ipynb  1_adding_engineered_features_vardataset.ipynb  1_feature_engineering.ipynb  1_feature_engineering_vardataset.ipynb  README.md  baseline_model.ipynb  main.py  pyproject.toml  test.ipynb
Developement/: 02_baseline_model.ipynb  03_2_feature_importance_Gridseach_vardataset.ipynb  1_adding_engineered_features.ipynb  1_adding_engineered_features_vardataset.ipynb  1_feature_engineering_vardataset.ipynb
notebooks/: baseline_model.ipynb  battery_soh_analysis.ipynb  battery_soh_data_preprocessing.ipynb  compare_discharge_protocols.ipynb  feature_importance.ipynb
src/battery_aging/: data_preprocessing.py  feature_engineering.py  model_functions.py
