[project]
name = "battery-aging-feature-analysis"
version = "0.1.0"
description = "Machine learning based analysis of battery aging behavior and State of Health prediction using engineered features."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.8.9"]
build-backend = "uv_build"
 
[tool.uv.build-backend]
module-name = "battery_aging"